# mactools

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  setup.py  version.py
.config/: README.md  lefthook.toml
mactools/: __init__.py  basemac.py  changelog.md  mac_common.py  mac_core.py  macaddress.py  tools_common.py  update_ieee.py  version.py
mactools/cli/: oui.py
mactools/oui_cache/: __init__.py  oui_api_calls.py  oui_classes.py  oui_common.py  oui_core.py  oui_template.py
nix/: devshells.nix  packages.nix  shell.nix
tests/: test_api_calls.py  test_cli.py  test_common.py  test_mac_common.py  test_macaddress.py  test_oui_cache.py  test_update_ieee.py
