[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mactools"
version = "1.8.0"
description = "MAC Address-focused library similar to ipaddress"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Buckley"}
]
keywords = ["python", "networking", "network", "mac", "oui", "ieee"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/Michael-C-Buckley/mactools"
Repository = "https://github.com/Michael-C-Buckley/mactools"
Issues = "https://github.com/Michael-C-Buckley/mactools/issues"

[tool.setuptools]
packages = ["mactools", "mactools.oui_cache"]

[tool.setuptools.package-data]
mactools = ["resources/ieee/*.csv"]

[project.optional-dependencies]
dev = [
    "nox",
    "coverage",
    "black",
    "isort",
    "flake8",
]
